# TinySTG

./: .gitignore  CMakeLists.txt  Config.h  README.md  TinySTG.cpp  TinySTG.ino
SDL/Linux/: makefile
SDL/RGnano/: makefile
SDL/RGnano-funkey-s/: makefile
SDL/RGnano-miyoo/: makefile
SDL/VisualStudio2019/: TinySTG.sln  TinySTG.vcxproj  TinySTG.vcxproj.filters
SDL2/RaspberryPI/: makefile
SDL2/VisualStudio2019/: TinySTG.vcxproj  TinySTG.vcxproj.filters
VisualStudio2019/: TinySTG.sln  TinySTG.vcxproj  TinySTG.vcxproj.filters
VisualStudio2019/TinySTG/: bgm.raw
lib/Config/: CMakeLists.txt  DEV_Config.c
lib/Fonts/: CMakeLists.txt
lib/GUI/: CMakeLists.txt  GUI_Paint.c  GUI_Paint.h
lib/Icm20948/: CMakeLists.txt
lib/Infrared/: CMakeLists.txt  Infrared.c  Infrared.h
lib/LCD/: CMakeLists.txt  LCD_1in14.c  LCD_1in14.h
lib/sdl2/sdl2_image/: LICENSE
src/: Bg.h  Bomb.h  Boss1.cpp  Boss1.hpp  Boss2.cpp  Boss2.hpp  Boss3.cpp  Boss3.hpp  Boss4.cpp  Boss4.hpp  Boss5.cpp  Boss5.hpp  Boss6.cpp  Boss6.hpp  Bullet.cpp  Bullet.hpp  Character.h  Crush.h  CrushBoss.h  DaimonLogo.h  Enemy.cpp  Enemy.hpp  Enemy1.cpp  Enemy1.hpp  Enemy2.cpp  Enemy2.hpp  Enemy3.cpp  Enemy3.hpp  Enemy4.cpp  Enemy4.hpp  Enemy5.cpp  Enemy5.hpp  Explode.cpp  Explode.hpp  Game.cpp  Game.hpp  Get.h  Global.cpp  Global.hpp  Gun.h  (+18 more)
src/TinyLibrary/: AdpcmDecorder.cpp  AdpcmDecorder.hpp  Dependent.hpp  Font4x6.h  Font4x6_65536.h  Font6x8.h  Font6x8_65536.h  Mathmatics.cpp  Mathmatics.hpp  Report.cpp  Report.hpp  SoundMixer.cpp  SoundMixer.hpp  SoundPlayer.cpp  SoundPlayer.hpp  TinyLibrary.hpp
(+87 files in other folders)
